<resources>
    <string name="app_name">OVS</string>
    <string name="text">Welcome</string>
    <string name="enter_aadhar_no">Enter Aadhar No:</string>
    <string name="_0123_4567_1234">0123 4567 1234</string>
    <string name="_8892_4687_1234">8892 4687 1234</string>
    <string name="enter_voterid_no">Enter VoterID No:</string>
    <string name="_12brti3y">12Brti3Y</string>
    <string name="submit">Submit</string>
    <string name="_1234">1234</string>
    <string name="_12345678">12345678</string>
    <string name="_4567">4567</string>
    <string name="_7890">7890</string>
    <string name="_8292_0123_4567">8292 0123 4567</string>
    <string name="aadhar_no">Aadhar No:</string>
    <string name="retrive_number">Retrive_number</string>
    <string name="name">Name:</string>
    <string name="aadhar_details">Aadhar Details:</string>
    <string name="tamizhan">Tamizhan</string>
    <string name="address">Address:</string>
    <string name="dubai_main_road_dubai_kuruku_sandhu">Dubai main road dubai kuruku sandhu</string>
    <string name="ward_no">Ward No:</string>
    <string name="_90">90</string>
    <string name="proceed">Proceed</string>
    <string name="textview">TextView</string>
    <string name="authentication">Authentication:</string>
    <string name="fingerprint_aunthentication">FingerPrint Aunthentication</string>
    <string name="aadhar_voterid_details">Aadhar/VoterID Details:</string>
    <string name="fingerprint_authentication">Fingerprint Authentication:</string>
    <string name="mobile_authentication">Mobile Authentication:</string>
    <string name="people_who_elect_corrupt_politicians_are_not_victims_but_accomplices">\'People\' who elect corrupt \'Politicians\' are not victims but \'Accomplices\'</string>
    <string name="authenticate">Authenticate</string>
    <string name="enter_otp">Enter OTP:</string>
    <string name="candidates_list">Candidates List</string>
    <string name="bjp">BJP</string>
    <string name="congress">Congress</string>
    <string name="jds">JDS</string>
    <string name="admk">ADMK</string>
    <string name="nota">NOTA</string>
    <string name="todo">TODO</string>
</resources>
