<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="103dp"
        android:layout_height="116dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal|vertical"
        android:linksClickable="false"
        android:text="@string/aadhar_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.052"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textID"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="LOADING..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aadhar_details"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="83dp"
        android:layout_height="18dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="LOADING..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textID"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:text="Contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/textParty"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="LOADING..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:text="@string/ward_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textParty"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textWard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textParty"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/buttonVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EDFC0560"
        android:text="@string/proceed"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWard" />

    <LinearLayout
        android:id="@+id/userImage"
        android:layout_width="102dp"
        android:layout_height="118dp"
        android:background="@drawable/plain"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>